...
      <View style={styles.heroSection}>
        <Header title={"Spacecraft"} />
      </View>
      <Card style={styles.loginSection}>
        <TextInput
          value={email}
          label={"Email"}
          onChangeText={changeEmail}
          style={styles.input}
        />
        <TextInput
          value={password}
          label={"Password"}
          onChangeText={changePassword}
          secureTextEntry={isSecure}
          style={styles.input}
        />
        <Checkbox.Item
          label="Show Password"
...
