export const Routes = {
  LOGIN_SCREEN: "Login",
  TERMS_SCREEN: "Terms",
  STARSHIPS_SCREEN: "Starships",
  DETAILS_SCREEN: "Details",
} as const;
